cfn-templates/cfn-vpc-3azs.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC: public and private subnets in 3 availability zones"
Parameters:
  EnvironmentName:
    Description: Name of the environment
    Type: String

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.20.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: "Name"
          Value: !Sub "${EnvironmentName}-VPC"

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: "igw"
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  SubnetAPublic:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: "10.20.0.0/20"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "A public"
        - Key: Reach
          Value: public
  SubnetAPrivate:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: "10.20.16.0/20"
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "A private"
        - Key: Reach
          Value: private
  SubnetBPublic:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: "10.20.32.0/20"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "B public"
        - Key: Reach
          Value: public
  SubnetBPrivate:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: "10.20.48.0/20"
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "B private"
        - Key: Reach
          Value: private
  SubnetCPublic:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: "10.20.65.0/24"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Public-Subnet-3"
        - Key: Reach
          Value: public
  SubnetCPrivate:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: "10.20.78.0/24"
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-Subnet-3"
        - Key: Reach
          Value: private
  RouteTablePublic: # should be RouteTableAPublic, but logical id was not changed for backward compatibility
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "A Public"
  RouteTablePrivate: # should be RouteTableAPrivate, but logical id was not changed for backward compatibility
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "A Private"
  RouteTableBPublic:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "B Public"
  RouteTableBPrivate:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "B Private"
  RouteTableCPublic:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} - Routing Table Public 3"
  RouteTableCPrivate:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} - Routing Table Private 3"
  RouteTableAssociationAPublic:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetAPublic
      RouteTableId: !Ref RouteTablePublic
  RouteTableAssociationAPrivate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetAPrivate
      RouteTableId: !Ref RouteTablePrivate
  RouteTableAssociationBPublic:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetBPublic
      RouteTableId: !Ref RouteTableBPublic
  RouteTableAssociationBPrivate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetBPrivate
      RouteTableId: !Ref RouteTableBPrivate
  RouteTableAssociationCPublic:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetCPublic
      RouteTableId: !Ref RouteTableCPublic
  RouteTableAssociationCPrivate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetCPrivate
      RouteTableId: !Ref RouteTableCPrivate
  RouteTablePublicInternetRoute: # should be RouteTablePublicAInternetRoute, but logical id was not changed for backward compatibility
    Type: "AWS::EC2::Route"
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  RouteTablePublicBInternetRoute:
    Type: "AWS::EC2::Route"
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTableBPublic
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  RouteTablePublicCInternetRoute:
    Type: "AWS::EC2::Route"
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTableCPublic
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  NetworkAclPublic:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public
  NetworkAclPrivate:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Private
  SubnetNetworkAclAssociationAPublic:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetAPublic
      NetworkAclId: !Ref NetworkAclPublic
  SubnetNetworkAclAssociationAPrivate:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetAPrivate
      NetworkAclId: !Ref NetworkAclPrivate
  SubnetNetworkAclAssociationBPublic:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetBPublic
      NetworkAclId: !Ref NetworkAclPublic
  SubnetNetworkAclAssociationBPrivate:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetBPrivate
      NetworkAclId: !Ref NetworkAclPrivate
  SubnetNetworkAclAssociationCPublic:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetCPublic
      NetworkAclId: !Ref NetworkAclPublic
  SubnetNetworkAclAssociationCPrivate:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref SubnetCPrivate
      NetworkAclId: !Ref NetworkAclPrivate
  NetworkAclEntryInPublicAllowAll:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: "0.0.0.0/0"
  NetworkAclEntryOutPublicAllowAll:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: "0.0.0.0/0"
  NetworkAclEntryInPrivateAllowVPC:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: "0.0.0.0/0"
  NetworkAclEntryOutPrivateAllowVPC:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: "0.0.0.0/0"
Outputs:
  TemplateID:
    Description: "Madstone Technology VPC CFN Template with 2 Availability Zones."
    Value: "vpc/vpc-2azs"
  StackName:
    Description: "Stack name."
    Value: !Sub "${AWS::StackName}"
  AZs:
    Description: "AZs"
    Value: 3
    Export:
      Name: !Sub "${AWS::StackName}-AZs"
  AZA:
    Description: "AZ of A"
    Value: !Select [0, !GetAZs ""]
    Export:
      Name: !Sub "${AWS::StackName}-AZA"
  AZB:
    Description: "AZ of B"
    Value: !Select [1, !GetAZs ""]
    Export:
      Name: !Sub "${AWS::StackName}-AZB"
  AZC:
    Description: "AZ of C"
    Value: !Select [2, !GetAZs ""]
    Export:
      Name: !Sub "${AWS::StackName}-AZC"
  CidrBlock:
    Description: "The set of IP addresses for the VPC."
    Value: !GetAtt "VPC.CidrBlock"
    Export:
      Name: !Sub "${AWS::StackName}-CidrBlock"
  VpcId:
    Description: "VPC."
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPC"
  SubnetsPublic:
    Description: "Subnets public."
    Value:
      !Join [",", [!Ref SubnetAPublic, !Ref SubnetBPublic, !Ref SubnetCPublic]]
    Export:
      Name: !Sub "${AWS::StackName}-SubnetsPublic"
  SubnetsPrivate:
    Description: "Subnets private."
    Value:
      !Join [
        ",",
        [!Ref SubnetAPrivate, !Ref SubnetBPrivate, !Ref SubnetCPrivate],
      ]
    Export:
      Name: !Sub "${AWS::StackName}-SubnetsPrivate"
  RouteTablesPrivate:
    Description: "Route tables private."
    Value:
      !Join [
        ",",
        [
          !Ref RouteTablePrivate,
          !Ref RouteTableBPrivate,
          !Ref RouteTableCPrivate,
        ],
      ]
    Export:
      Name: !Sub "${AWS::StackName}-RouteTablesPrivate"
  RouteTablesPublic:
    Description: "Route tables public."
    Value:
      !Join [
        ",",
        [!Ref RouteTablePublic, !Ref RouteTableBPublic, !Ref RouteTableCPublic],
      ]
    Export:
      Name: !Sub "${AWS::StackName}-RouteTablesPublic"
  SubnetAPublic:
    Description: "Subnet A public."
    Value: !Ref SubnetAPublic
    Export:
      Name: !Sub "${AWS::StackName}-SubnetAPublic"
  RouteTableAPublic:
    Description: "Route table A public."
    Value: !Ref RouteTablePublic
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableAPublic"
  SubnetAPrivate:
    Description: "Subnet A private."
    Value: !Ref SubnetAPrivate
    Export:
      Name: !Sub "${AWS::StackName}-SubnetAPrivate"
  RouteTableAPrivate:
    Description: "Route table A private."
    Value: !Ref RouteTablePrivate
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableAPrivate"
  SubnetBPublic:
    Description: "Subnet B public."
    Value: !Ref SubnetBPublic
    Export:
      Name: !Sub "${AWS::StackName}-SubnetBPublic"
  RouteTableBPublic:
    Description: "Route table B public."
    Value: !Ref RouteTableBPublic
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableBPublic"
  SubnetBPrivate:
    Description: "Subnet B private."
    Value: !Ref SubnetBPrivate
    Export:
      Name: !Sub "${AWS::StackName}-SubnetBPrivate"
  RouteTableBPrivate:
    Description: "Route table B private."
    Value: !Ref RouteTableBPrivate
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableBPrivate"
  SubnetCPublic:
    Description: "Subnet C public."
    Value: !Ref SubnetCPublic
    Export:
      Name: !Sub "${AWS::StackName}-SubnetCPublic"
  RouteTableCPublic:
    Description: "Route table C public."
    Value: !Ref RouteTableBPublic
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableCPublic"
  SubnetCPrivate:
    Description: "Subnet C private."
    Value: !Ref SubnetCPrivate
    Export:
      Name: !Sub "${AWS::StackName}-SubnetCPrivate"
  RouteTableCPrivate:
    Description: "Route table C private."
    Value: !Ref RouteTableCPrivate
    Export:
      Name: !Sub "${AWS::StackName}-RouteTableCPrivate"
